# cs231n_project_data_generation

./: package.xml  setup.py
Worlds/: empty.world  metrics.world  ycb.world  ycb_test.world
data_generation/: gz_render.py  gz_render_v2.py  gz_render_v3.py  gz_render_v4.py  gz_render_v5.py  gz_render_v6.py
launch/: metrics.launch.py
models/table/: model.sdf
models/table1/: model.sdf
