<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>data_generation</name>
  <version>0.0.1</version>
  <description>package for data generation in Gazebo</description>
  <maintainer email="alexmanson_lu@outlook.com">alexmanson</maintainer>
  <license>TODO: License declaration</license>
  
  <!-- Dependencies -->
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_sim</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
